History
=======

Version 0.6.10 - Unreleased
--------------------------

Version 0.6.9 - 2009-01-20
--------------------------

- Pinned zope.app.catalog version to pre 3.6.0 to avoid issue in
  https://bugs.launchpad.net/singing-dancing/+bug/301082
  [tmog]

Version 0.6.8 - 2009-01-02
--------------------------

- MessageQueues are now collective.singing.queue.CompositeQueue - an
  optimized version of zc.queue.CompositeQueue. This offers a _much_
  faster __len__ and  faster access to last queue element.
  Tests are stolen from zc.queue with added length checking everywhere.
  This maybe belongs directly in zc.queue, but adding stuff in zc namespace
  is not for me. ;-)  
  [tmog]
  
Version 0.6.7 - 2008-12-03
--------------------------

- Part of Czech translation.  
  [naro]

- Some refactoring in order to allow for more customized subscription forms.
  [nouri]

- Added french translation.

Version 0.6.6 - 2008-11-13
--------------------------

- Add the subscriber languages to subscription metadata at
  subscription time.  [nouri]

Version 0.6.5 - 2008-11-05
--------------------------

- Used ``i18ndude`` to find all untranslated msgid's. Some line-numbers were
  corrected, but nothing changed in ``collective.singing``.  There were some
  updates in collective.dancing, so all guy's please help updating 
  collective.dancing's po files.  [saily]

- Add ``async`` module that allows to queue jobs for asynchronous
  execution.  Creating this was necessary because ``zc.async`` is not
  available for all Zope versions that ``collective.dancing`` aims to
  work with.  :-( [nouri]

- Allow for more finer grained control of cue in
  ``IMessageAssemble.render_message``.  This allows a preview function
  to request the cue to be used but not to be set when rendering a
  preview. [nouri]

Version 0.6.4 - 2008-10-29
--------------------------

- Added optional checking for channel attr 'sendable' to
  channel_lookup. Sending of a content item from the